update responcss, fix footer padding on xl, make sidebar scroll auto

--- a/scss/responcss/responcss.scss
+++ b/scss/responcss/responcss.scss
@@ -1,5 +1,5 @@
 /*!
- * ResponCSS v2.5.0 - Responsive fluid CSS layout framework
+ * ResponCSS v2.8 - Responsive fluid CSS layout framework
  *
  * (c) 2012, Adam Draper - https://github.com/adamwdraper
  *
@@ -23,7 +23,7 @@
 @import "overs";
 
 // ResponCSS Block Grids
-@import "block-grids";
+// @import "block-grids";
 
 // // ResponCSS Visibility Override classes
 @import "overrides"; // Has to be last to override when necessary
