update version of Styles

--- a/scss/styles/bootstrap/bootstrap.scss
+++ b/scss/styles/bootstrap/bootstrap.scss
@@ -1,8 +1,9 @@
 /*!
- * 
- *  Styles 
+ * Styles 0.0.1 - https://github.com/adamwdraper/styles
  *
- *  https://github.com/adamwdraper/styles
+ * (c) 2012, Adam Draper - https://github.com/adamwdraper
+ *
+ * MIT & BSD
  *
  */
 
