--- a/scss/theme/theme.scss
+++ b/scss/theme/theme.scss
@@ -10,10 +10,10 @@
 @import "variables";
 
 // // import any styles components
-@import "../styles/components/buttons";
-@import "../styles/components/icons";
+@import "../styles/components/button";
+@import "../styles/components/icon";
 @import "../styles/components/code";
-@import "../styles/components/tables";
+@import "../styles/components/table";
 
 // import project icons
 @import "icons";
