--- a/scss/styles/bootstrap/functions.scss
+++ b/scss/styles/bootstrap/functions.scss
@@ -1,4 +1,5 @@
-// Functions
+// Styles - https://github.com/adamwdraper/styles
+// Functions 0.0.1
 // -----------------------------------------------------------------
 
 @function pxem ($target: $baseFontSizeNum, $context: $baseFontSizeNum) {
