--- a/scss/styles/components/auto-suggest.scss
+++ b/scss/styles/components/auto-suggest.scss
@@ -1,9 +1,7 @@
-// auto-suggest.scss
+// Styles - https://github.com/adamwdraper/styles
+// Auto Suggest 0.0.1
 // -----------------------------------------------------------------
 
-
-// Auto Suggest
-// -----------------------
 .auto-suggest {
     position: relative;
 
