--- a/scss/styles/components/close.scss
+++ b/scss/styles/components/close.scss
@@ -1,8 +1,7 @@
-// Snippets of reusable CSS to develop faster and keep code readable
+// Styles - https://github.com/adamwdraper/styles
+// Close 0.0.1
 // -----------------------------------------------------------------
 
-// Close
-// -----------------------
 .close {
     color: $grayLight;
     @include transition(color .3s ease);
