--- a/scss/styles/components/code.scss
+++ b/scss/styles/components/code.scss
@@ -1,8 +1,7 @@
-// Code.scss
-// Code typography styles for the <code> and <pre> elements
-// --------------------------------------------------------
+// Styles - https://github.com/adamwdraper/styles
+// Code 0.0.1
+// -----------------------------------------------------------------
 
-// Inline and block code styles
 pre {
   font-size: .9em;
   color: $grayDark;
