--- a/scss/styles/components/nav-bar.scss
+++ b/scss/styles/components/nav-bar.scss
@@ -1,3 +1,7 @@
+// Styles - https://github.com/adamwdraper/styles
+// Nav Bar 0.0.1
+// -----------------------------------------------------------------
+
 .nav-bar {
     background: $navBarBackgroundColor;
     color: #EFEFEF;
