--- a/scss/styles/components/tag-cloud.scss
+++ b/scss/styles/components/tag-cloud.scss
@@ -1,5 +1,6 @@
-// tag cloud
-// -----------------------
+// Styles - https://github.com/adamwdraper/styles
+// Tag Cloud 0.0.1
+// -----------------------------------------------------------------
 
 @mixin tag-cloud-type($type) {
     color: white;
