--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -170,3 +170,17 @@ $alertLargeBorderRadius: $largeInnerBorderRadius;
 $alertBackgroundVarient: 35%;
 $alertBorderVarient: 25%;
 $alertColorVarient: 18%;
+
+// Code
+// -------------------------
+$codeColor: $grayDark;
+$codeBackground: #f8f8f8;
+$codeBorder: 1px solid $grayLight;
+$codeBorderRadius: $borderRadius;
+
+// Tables
+// -------------------------
+$tableBackground: #F8F8F8;
+$tableBorder: 1px solid $grayLight;
+$tableStripedBackground: $grayLightest;
+$tableBorderRadius: $borderRadius;
