--- a/scss/styles/components/code.scss
+++ b/scss/styles/components/code.scss
@@ -3,24 +3,23 @@
 // -----------------------------------------------------------------
 
 pre {
-  font-size: .9em;
-  color: $grayDark;
-  display: block;
-  padding: pxem(10);
-  margin: pxem(5) 0;
-  line-height: 1.2em;
-  word-break: break-all;
-  word-wrap: break-word;
-  white-space: pre;
-  white-space: pre-wrap;
-  background-color: #f8f8f8;
-  border: 1px solid #ccc; // fallback for IE7-8
-  border: 1px solid rgba(0,0,0,.15);
-  @include border-radius(pxem(4));
+    font-size: .9em;
+    color: $codeColor;
+    display: block;
+    padding: pxem(10);
+    margin: pxem(5) 0;
+    line-height: 1.2em;
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre;
+    white-space: pre-wrap;
+    background-color: $codeBackground;
+    border: $codeBorder; // fallback for IE7-8
+    @include border-radius($codeBorderRadius);
 
-  // Enable scrollable blocks of code
-  .scrollable {
-    max-height: 340px;
-    overflow-y: scroll;
-  }
+    // Enable scrollable blocks of code
+    &.scrollable {
+        max-height: 340px;
+        overflow-y: scroll;
+    }
 }
