--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,5 +1,6 @@
+// Styles - https://github.com/adamwdraper/styles
 // Overwride any variables from styles/variables as needed here
-// --------------------------------------------------------------
+// -----------------------------------------------------------------
 
 $black: #000;
 $grayDarkest: #111;
