--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -61,16 +61,39 @@ a {
 
     }
 }
+p {
+    margin: .5em 0;
+}
+
+h1 {
+    font-size:1.75em;
+}
+
+h2 {
+    font-size:1.5em;
+    color: $grayDark;
+}
 
 h3 {
     color: $grayDark;
-    font-size: 1.4em;
+    font-size: 1.25em;
 }
 
 h4 {
+    font-size: 1.15em;
+    margin: .7em 0;
     color: $gray;
-    font-size: 1.2em;
     margin-bottom: .4em;
+}
+
+h5 {
+    font-size:1.1em;
+    margin: .5em 0;
+}
+
+h6 {
+    font-size:1em;
+    margin: .3em 0;
 }
 
 .header-bar {
@@ -143,7 +166,7 @@ h4 {
     }
 }
 
-.footer {
+body > .footer {
     background: white;
 
     .inner {
@@ -286,7 +309,7 @@ h4 {
         }
     }
 
-    .footer {
+    body > .footer {
         display: block;
         position: fixed;
         bottom: 0;
@@ -335,7 +358,7 @@ h4 {
         }
     }
 
-    .footer {
+    body > .footer {
 
         .inner {
             padding: 0 0 0 4em;
