--- a/scss/styles/utilities.scss
+++ b/scss/styles/utilities.scss
@@ -1,5 +1,5 @@
 // Styles - https://github.com/adamwdraper/styles
-// Utilities 0.0.1
+// Utilities 0.0.2
 // -----------------------------------------------------------------
 
 // Clearfix
@@ -26,4 +26,15 @@
   text-shadow: none;
   background-color: transparent;
   border: 0;
+}
+
+.disabled {
+    @include opacity($disabledOpacity);
+    cursor: not-allowed;
+}
+
+.caption {
+    font-size: .8em;
+    line-height: 1.2em;
+    color: lighten($grayDark, 10%);
 }
